Fixed grid system, divided css files for better readability

--- a/src/index.css
+++ b/src/index.css
@@ -46,10 +46,6 @@
   font-style: italic;
 }
 
-body{
-  width: 100%;
-}
-
 a {
   font-weight: 500;
   color: #646cff;
@@ -100,129 +96,43 @@ button:focus, button:focus-visible {
 
 }
 
-.contentcontainer{
-  margin-left: 6em;
-}
-
-.grid-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.menu {
+.AppBG {
+  margin: 0;
+  overflow-x: hidden;
+  background-image: url(./src/assets/images/img3.jpg);
   width: 100%;
-  max-width: 600px; 
-  background-color: #f0f0f0;
-  border-radius: 10px;
-  padding: 20px;
-  margin: auto;
-  margin-top: 200px;
+  height: 100%;
 }
 
-.menu-header {
-display: flex;
-justify-content: space-between;
-align-items: center;
-margin-bottom: 20px;
-}
-
-.menu-header h2 {
+.AppBG2 {
+  background-color: #00000090;
+  width: 100%;
+  height: 100%;
   margin: 0;
 }
 
-.menu-items {
-  border-top: 1px solid #ccc;
-  margin-left: 10px;
+.sidebarcontainer{
+  padding-left: 0;
 }
-
-.menu-item {
-display: flex;
-justify-content: space-between;
-align-items: center;
-padding: 10px;
-cursor: pointer;
-border-radius: 8px;
-margin-top: 2px;
-}
-
-.menu-item:hover {
-  background-color: #e0e0e0;
-}
-
-.menu-item:first-child {
-  border-top: none;
-}
-
-.menu-header .form-control {
-margin: 0 10px; 
-}
-
-.day-name{
-  text-align: center;
-  font-size: 30px;
-  margin-top: 40px;
-  color: #2CBFA4;
-  font-weight: bold;
-}
-
-.menu-item.selected {
-outline: 2px solid #2CBFA4; 
-outline-offset: -2px; 
-}
-
-.menu .clear-button {
-margin-top: 10px;
-}
-
-.menu-item.daily-task {
-  background-color: rgba(24, 158, 220, 0.941)
-}
-
-.menu-item > span {
-  flex-grow: 1;
-}
-
-.menu-item > div {
-  display: flex;
-  gap: 5px;
-}
-
-.centered-caption {
-  text-align: center;
-}
-
-.form-control-margin {
-  margin-bottom: 8px;
-}
-
-.button-container {
-  display: flex;
-  justify-content: space-between;
-}
-
-.custom-calendar {
-  transform: scale(2.5);
-}
-
-/*.day-with-tasks {
-  background-color: #ff0;
-}*/
 
 .sidebar{
-  width: 105px;
+  top: 0;
+  left: 0;
+  width: 100px;
   height: 100vh;
-  background-color: #323232;
+  background-color: #323232a4;
   display: flex;
-  flex-direction: row;
+  flex: 0 0 auto;
   overflow-x: hidden;
   text-decoration: none;
   justify-content: center;
+  position: sticky;
 }
 
 .sidebar ul {
   list-style: none;
   padding: 0;
+  margin-left: 3%;
 }
 
 .sidebar li {
@@ -231,7 +141,6 @@ margin-top: 10px;
 
 .sidebarlogo{
   margin-top: 30px;
-  margin-left: 9%;
   text-align: center;
   color: #e0e0e0;
   font-weight: normal;
@@ -240,19 +149,14 @@ margin-top: 10px;
 
 .sidebartext{
   margin-top: 30px;
-  margin-left: 7%;
   text-align: center;
   color: #e0e0e0;
   font-weight: normal;
   cursor: pointer;
 }
 
-.AppBG {
-  margin: 0;
-  overflow-x: hidden;
-  background-image: url(./src/assets/images/img3.jpg);
-} 
+.contentcontainer {
+  flex: 1;
+  margin-right: 2em;
+}
 
-.AppBG2{
-  background-color: #00000081;
-}     
