--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,17 +1,30 @@
 .HomeComponent {
-    margin-left:7em;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
     margin-top: 4em;
+    margin-left: 18em;
 }
 
 .HomeText {
     margin-top: 10em;
     color: white;
-    text-align: center;
-    margin-left: 4em;
+    text-align: center
+}
+
+.btngrid{
+    margin-left: 7em;
 }
 
 .btnhomelogin {
     max-width: 120px;
     max-height: 60px;   
     text-wrap: nowrap;
+}
+
+.infogrid{
+    color:white;
+    justify-content: center;
+    text-align: center;
+    margin-right: 2em;
 }
